--- a/userService/package.json
+++ b/userService/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -19,8 +19,9 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mochai": "^0.2.5",
-    "mongoose": "^5.13.7"
+    "mocha": "^9.0.3",
+    "mongoose": "^5.13.7",
+    "supertest": "^6.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
