--- a/userService/package.json
+++ b/userService/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "chai": "^4.3.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^9.0.3",
-    "mongoose": "^5.13.7",
-    "supertest": "^6.1.5"
+    "mongoose": "^5.13.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3",
+    "supertest": "^6.1.5"
   }
 }
