--- a/emailService/package.json
+++ b/emailService/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "lodash.once": "^4.1.1",
     "mongoose": "^6.0.6",
     "nodemailer": "^6.6.3",
     "uuid": "^8.3.2"
@@ -26,6 +27,7 @@
     "@types/amqplib": "^0.8.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/lodash.once": "^4.1.6",
     "@types/node": "^16.9.4",
     "@types/nodemailer": "^6.4.4",
     "chai": "^4.3.4",
