--- a/userService/package.json
+++ b/userService/package.json
@@ -20,15 +20,16 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash.once": "^4.1.1",
     "mongoose": "^5.13.7",
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
+    "nodemon": "^2.0.12",
     "supertest": "^6.1.5"
   }
 }
