--- a/userService/package.json
+++ b/userService/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.39.0",
     "amqplib": "^0.8.0",
+    "aws-sdk": "^2.1022.0",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
